k8s/ingress.yaml
apiVersion: networking.k8s.io/v1   
kind: Ingress   
metadata:   

  name: micros-ingress   
spec:
  tls:
  - hosts:
      - micros.info
    secretName: my-micros-certs      
  rules:   
    - host: micros.info
      http:   
        paths:   
          - path: /rest 
            pathType: Prefix   
            backend:   
              service:   
                name: servicio-hola-clusterip   
                port:   
                  number: 8080
          - path: /image   
            pathType: Prefix   
            backend:   
              service:   
                name: servicio-imagen-clusterip   
                port:   
                  number: 8080
          - path: /boton   
            pathType: Prefix   
            backend:   
              service:   
                name: servicio-boton-clusterip   
                port:   
                  number: 8080
